# crensor

./: LICENSE  README.md  pyproject.toml
src/crensor/: __init__.py  data_handling.py
